--- a/style1.htm
+++ b/style1.htm
@@ -84,6 +84,15 @@
         font-weight:bold;
     }
 
+    .menulink{
+            text-decoration-line: none;
+            color: black;
+    }
+
+    #menulink1{
+        color: white;
+    }
+
     a {
         color: #000000;
         text-decoration: underline;
@@ -127,11 +136,11 @@
     <div class="wrapper">
         <div id="menubar">
             <ul id="menulist">
-                <li class="menuitem">Stylesheet 1</li>
-                <li class="menuitem">Stylesheet 2</li>
-                <li class="menuitem">Stylesheet 3</li>
-                <li class="menuitem">Stylesheet 4</li>
-                <li class="menuitem">No Stylesheet</li>
+                <li class="menuitem"><a href="style1.htm" id="menulink1" class="menulink">Stylesheet 1</a></li>
+                <li class="menuitem"><a href="style2.htm" class="menulink">Stylesheet 2</a></li>
+                <li class="menuitem"><a href="style3.htm" class="menulink">Stylesheet 3</a></li>
+                <li class="menuitem"><a href="style4.htm" class="menulink">Stylesheet 4</a></li>
+                <li class="menuitem"><a href="index.htm" class="menulink">No Stylesheet</a></li>
             </ul>
         </div>
 
@@ -140,14 +149,14 @@
             <p>This is a demonstration of how different stylesheets can change the layout of your HTML page. You can change the layout of this page by selecting different stylesheets in the menu, or by selecting one of 
                 the following links:
                 <br>
-                <a href="style1.html">Stylesheet1</a>,
-                <a href="style2.html">Stylesheet2</a>,
-                <a href="style3.html">Stylesheet3</a>,
-                <a href="style4.html">Stylesheet4</a>.
+                <a href="style1.htm">Stylesheet1</a>,
+                <a href="style2.htm">Stylesheet2</a>,
+                <a href="style3.htm">Stylesheet3</a>,
+                <a href="style4.htm">Stylesheet4</a>.
             </p>
             <h2>No Styles</h2>
             <p>This page uses DIV elements to group different sections of the HTML page. Click here to see how the page looks like with no stylesheet:
-                <br><a href="index.html">No Stylesheet</a>.
+                <br><a href="index.htm">No Stylesheet</a>.
             </p>
         </div>
 
