--- a/example.htm
+++ b/example.htm
@@ -8,8 +8,8 @@
     <style>
     
     body {
-        background-color: #212529;
-        color: #DEE2E6;
+        background-color: #FFFFFF;
+        color: #212529;
         font-size: 16px;
         margin: 0px 0px;
     }
@@ -38,7 +38,7 @@
     }
 
     #bottom{
-        background-color: #2B3035;
+        background-color: #F8F9FA;
         padding: 16px 0px;
         position: fixed;
         width: 100%;
@@ -46,13 +46,13 @@
     }
 
     #footer{
-        color: #DEE2E6BF;
+        color: #212529BF;
         padding: 0px 15px;
         width: 650px;
     }
 
     a{
-        color: #6EA8FE;
+        color: #0D6EFD;
     }
 
     @media (min-width: 768px) {
